<resources>
    <string name="app_name">Final Project</string>
    <string name="calendarTitle">Calendar</string>
    <string name="taskTitle">Tasks</string>
    <string name="labelName">Name</string>
    <string name="labelDescription">Description</string>
    <string name="labelTime">Time</string>
    <string name="labelReminder">Set Reminder</string>
    <string name="labelClass">Class</string>
    <string name="addTask">Set Task</string>
    <string name="addHmwrk">Set Homework</string>
    <string name="hmwrkTitle">Homework</string>
    <string name="addHmwrkLabel">Add Homework</string>
    <string name="addTaskLabel">Add Task</string>
    <string name="calendarLabel">Calendar</string>
    <string name="Today">Today</string>
    <string name="nav_settings">Settings</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Open Navigation Close</string>


    <string name="dp_drop">DROP TABLE IF EXISTS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_language">Choose a Language</string>
    <string name="french">French</string>
    <string name="english">English</string>
    <string name="save">Save</string>
    <string name="delete_all_homework_and_all_tasks">Delete All Homework and All Tasks</string>
</resources>
