<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/draw_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">
    <!--tools:openDrawer="start"-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorAccent"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <LinearLayout
            android:id="@+id/noteFragmentContainer"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_language"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:textSize="30dp"/>

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/englishRadio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/english"
                        android:checked="true"
                        android:textStyle="bold"
                        android:textSize="20dp"/>
                <RadioButton
                    android:id="@+id/frenchRadio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/french"
                    android:textStyle="bold"
                    android:textSize="20dp"/>
            </RadioGroup>
            <TextView
                android:layout_marginTop="30dp"
                android:layout_marginLeft="30dp"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/delete_all_homework_and_all_tasks"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:textSize="30dp"/>
            <Button
                android:layout_marginTop="20dp"
                android:layout_marginLeft="150dp"
                android:id="@+id/deleteAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:textColor="@color/white"
                android:text="Delete All
"/>
            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:textColor="@color/white"
                android:text="@string/save"
                android:layout_marginLeft="155dp"
                android:textStyle="bold"
                android:layout_marginTop="210dp"/>
        </LinearLayout>

    </LinearLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_menu"/>

</androidx.drawerlayout.widget.DrawerLayout>